# projet-1-observatoire-immobilier-super-ai-team

./: .gitignore  <div class="logo-container">.css  README.md  README_carte.md  import csv.py  pyproject.toml  requirements.txt
analysis/: regression.py  stats.py
api/: regression_api.py  requirements.txt
app/: html.py  streamlit_app.py
backend/: __init__.py
backend/analysis/: __init__.py  knn.py  recommendation.py  regression.py  scoring.py  stats.py
backend/api/: dashboard_builder.py  main.py
backend/loaders/: __init__.py  csv_loader.py
backend/models/: __init__.py  data_models.py
backend/services/: __init__.py  property_service.py
data/: annonces.csv  annonces_enrichies.csv  annonces_images.csv  dvf.py  dvf_toulon.csv  enrich_annonces.py  merge_annonces.py  prix_quartiers.csv  scrape_images.py  seloger.csv  synthese_quartiers.json  synthese_quartiers.py  toulon_clean.py  toulon_listings.csv
data/processed/: .gitkeep  unified_toulon_properties.csv
data/raw/: 83137_2023.csv  83137_2024.csv  toulon_properties.csv
immo-app/: package-lock.json  package.json
immo-app/src/: App.jsx  index.css
immo-app/src/components/: AnnonceCard.jsx  Dashboard.css  Dashboard.jsx  FilterModal.css  FilterModal.jsx  Navbar.css  Navbar.jsx
immo-app/src/context/: AppContext.jsx
immo-app/src/pages/: Accueil.css  Accueil.jsx  AnnoncePage.css  AnnoncePage.jsx  Favoris.css  Login.css  Login.jsx  Profil.css
immo-appl/immo-app/: .eslintrc.cjs  index.html  package-lock.json  package.json
immo-appl/immo-app/src/: App.jsx  index.css
tests/: test_smoke.py  test_stats.py
(+15 files in other folders)
