[project]
name = "carte-toulon-project"
version = "0.1.0"
description = ""
authors = [
    {name = "franck aldrick",email = "nana.franck2015@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "folium (>=0.20.0,<0.21.0)",
    "pandas (>=2.0,<3)",
    "streamlit (>=1.55.0,<2.0.0)",
    "pydeck (>=0.9.1,<0.10.0)",
    "plotly (>=6.6.0,<7.0.0)",
    "numpy (>=2.4.3,<3.0.0)",
    "rich (>=14.3.3,<15.0.0)" 
]

[tool.poetry]
packages = [{include = "carte_toulon_project", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
